# yeastdnnexplorer

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  cpu.yml  gpu.yml  index.html  mkdocs.yml  mkdocs_requirements.txt  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  verify_gpu.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: branch.yml  ci.yml  docs.yml
compose/: Dockerfile
data_loaders/real_data_loader/: index.html
data_loaders/synthetic_data_loader/: index.html
docs/: index.md
docs/data_loaders/: real_data_loader.md  synthetic_data_loader.md
docs/interface/: AbstractAPI.md  AbstractRecordsAndFilesAPI.md  AbstractRecordsOnlyAPI.md  BindingAPI.md  BindingConcatenatedAPI.md  BindingManualQCAPI.md  Cache.md  CallingCardsBackgroundAPI.md  DataSourceAPI.md  DtoAPI.md  ExpressionAPI.md  ExpressionManualQCAPI.md  FileFormatAPI.md  GenomicFeatureAPI.md  ParamsDict.md  PromoterSetAPI.md  PromoterSetSigAPI.md  RegulatorAPI.md  metric_arrays.md  rank_transforms.md
docs/ml_models/: GeneralizedLogisticModel.md  customizable_model.md  lasso_modeling.md  metrics_compute_nrmse.md  metrics_smse.md  simple_model.md
docs/probability_models/: GenePopulation.md  default_perturbation_effect_adjustment_function.md  generate_binding_effects.md  generate_gene_population.md  generate_perturbation_binding_data.md  generate_perturbation_effects.md  generate_pvalues.md  perturbation_effect_adjustment_function_with_tf_relationships.md  perturbation_effect_adjustment_function_with_tf_relationships_boolean_logic.md  relation_classes.md
docs/tutorials/: Modelling Pipeline Tutorial.ipynb  database_interface.ipynb  exploring_perturbation_response_relationship.ipynb  generalized_logistic_models.ipynb  generate_in_silico_data.ipynb  hyperparameter_sweep.ipynb  interactor_modeling_workflow.ipynb  lassoCV.ipynb  lightning_crash_course.ipynb  sigmoidCV.ipynb  testing_model_metrics.ipynb  visualizing_and_testing_data_generation_methods.ipynb
docs/utils/: InteractorDiagnosticPlot.md  sigmoid.md
experiments/: inspect_simple_model.py  simple_model_synthetic_data.py
interface/AbstractAPI/: index.html
interface/BindingAPI/: index.html
search/: search_index.json
tests/: test_verify_gpu.py
tmp/: README.md
yeastdnnexplorer/: __init__.py  __main__.py
(+117 files in other folders)
