[tool.poetry]
name = "yeastdnnexplorer"
version = "0.0.1"
description = "A development environment to explore implementations of deep neural networks for predicting the relationship between transcription factor and target genes using binding and perturbation data"
authors = ["ben mueller <ben.j.mueller@wustl.edu>", "chase mateusiak <chasem@wustl.edu>", "michael brent <brent@wustl.edu>"]
license = "GPL-3.0"
readme = "README.md"
exclude = ["experiments/"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0, <2.3.0"
numpy = "^1.26.3"
pandas = "^2.2.0"
pytorch-lightning = "^2.1.4"
scikit-learn = "1.4.0"
tensorboard = "^2.16.1"

torchsummary = "^1.5.1"
optuna = "^3.6.0"
optuna-dashboard = "^0.15.1"
jupyter = "^1.0.0"
requests = "^2.32.3"
cachetools = "^5.3.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pyupgrade = "^3.15.0"
pytest = "^7.4.4"
mkdocs = "^1.5.3"
ipykernel = "^6.29.0"
docutils = "^0.20.1"
mkdocs-material = "^9.5.5"
pyright = "^1.1.348"
memory-profiler = "^0.61.0"
mkdocs-autorefs = "^0.5.0"
griffe = "^0.40.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
pre-commit = "^3.6.0"
mypy = "^1.8.0"
docformatter = {extras = ["tomli"], version = "^1.7.5"}
pytest-mock = "^3.12.0"
mkdocs-section-index = "^0.3.8"
pytest-cov = "^4.1.0"
mknotebooks = "^0.8.0"
responses = "^0.25.3"
snapshottest = "^0.6.0"
pytest-asyncio = "^0.23.7"
aioresponses = "^0.7.6"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
    "tests.py",
    "test_*.py",
]
pythonpath = ['.']

[tool.coverage.run]
include = ["yeastdnnexplorer/**"]
omit = ["*/tests/*", "experiments/"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = [
    "yeastdnnexplorer",
]
skip = ["venv/"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pylint.FORMAT]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
